# mint

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
mint/: __init__.py  auditor.py  banner.py  cleaner.py  cli.py  config.py  downloader.py  itunes.py  library.py  mb_cache.py  mb_client.py  models.py  mover.py  progress.py  reporter.py  tagger.py  title_parser.py
mint/commands/: add.py  clean.py  dup.py  fix.py  shell_init.py  update.py
tests/: conftest.py  test_auditor.py  test_banner.py  test_cleaner.py  test_cli.py  test_cli_add.py  test_cli_clean.py  test_cli_dup.py  test_cli_fix.py  test_config.py  test_conftest.py  test_downloader.py  test_fixer.py  test_itunes.py  test_library.py  test_library_genre.py  test_library_normalize.py  test_mb_cache.py  test_mb_client.py  test_models.py  test_mover.py  test_reporter.py  test_shell_init.py  test_tagger_read.py  test_tagger_write.py  test_title_parser.py  test_update.py
