[project]
name = "mint"
dynamic = ["version"]
description = "YouTube to Apple Music with MusicBrainz-correct ID3 tags"
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "mutagen>=1.47",
    "musicbrainzngs>=0.7.1",
    "requests>=2.31",
    "pyfiglet>=1.0",
    "yt-dlp>=2024.10.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mint = "mint.cli:main"

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mint*"]
exclude = ["tests*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.0.0+unknown"
