[project]
name = "mint"
version = "0.1.5"
description = "YouTube to Apple Music with MusicBrainz-correct ID3 tags"
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "mutagen>=1.47",
    "musicbrainzngs>=0.7.1",
    "requests>=2.31",
    "pyfiglet>=1.0",
    "yt-dlp>=2024.10.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mint = "mint.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mint*"]
exclude = ["tests*"]
